--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <title>Sign Up  Form</title>
 </head>
 <body>
-  <div>
-    <h1>Learn to code by watching others</h1>
+<div class="container">
+  <div class="page-text">
+    <h1 class="h1class">Learn to code by watching others</h1>
     <p>See how experienced developers solve problems in real-time. 
     Watching scripted tutorials is great, but understanding how developers think is invaluable.
     </p>
  </div>
  <div>
-  <p><strong>Try it for free for 7 days</strong> then $20/mo. thereafter</p>
+  <div class="cta round-edges container-shadow">
+    <p><strong>Try it for free for 7 days</strong> then $20/mo. thereafter</p>
+  </div>
+<div class="form-container">
+<div class="form round-corners round-edges container-shadow">
   <form>
-    <input type="text" name="first-name" placeholder="First Name"/>
-    <input type="text" name="last-name" placeholder="Last Name"/>
-    <input type="text" name="email" placeholder="Email Address"/>
-    <input type="text" name="password" placeholder="Password"/>
-    <input type="button" value="CLAIM YOUR FREE TRIAL" />
+    <input  type="text" name="first-name" placeholder="First Name"/>
+    <input  type="text" name="last-name" placeholder="Last Name"/>
+    <input  type="text" name="email" placeholder="Email Address"/>
+    <input  type="text" name="password" placeholder="Password"/>
+    <input  type="button" value="CLAIM YOUR FREE TRIAL" />
   </form>
-  <p>By clicking the button you are agreeing t our <strong>Terms and Services</strong>.</p>
+  <p class="terms">
+    By clicking the button you are agreeing to our <strong>Terms and Services</strong>.
+  </p>
  </div>
+</div>
+</div>
+</div> 
 </body>
 </html>
