--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <div class="form-container">
 <div class="form round-corners round-edges container-shadow">
   <form>
-    <input  type="text" name="first-name" placeholder="First Name"/>
-    <input  type="text" name="last-name" placeholder="Last Name"/>
-    <input  type="text" name="email" placeholder="Email Address"/>
-    <input  type="text" name="password" placeholder="Password"/>
-    <input  type="button" value="CLAIM YOUR FREE TRIAL" />
+    <input id="first-name" type="text" name="first-name" placeholder="First Name"/>
+    <input id="last-name" type="text" name="last-name" placeholder="Last Name"/>
+    <input id="email" type="text" name="email" placeholder="Email Address"/>
+    <input id="password" type="text" name="password" placeholder="Password"/>
+    <input  type="button" value="CLAIM YOUR FREE TRIAL" onclick="onSubmit()"/>
   </form>
   <p class="terms">
     By clicking the button you are agreeing to our <strong>Terms and Services</strong>.
@@ -37,5 +37,7 @@
 </div>
 </div>
 </div> 
+
+<script src="app.js"></script>
 </body>
 </html>
